--- a/html.html
+++ b/html.html
@@ -964,7 +964,7 @@ window.addEventListener('load', function() {
 
       <div class="text-center">
         <p class="text-gray-600 mb-6">⏱️ <strong>Total time to enrollment: 2-3 days</strong></p>
-        <button class="bg-primary text-white rounded-full px-12 py-3 font-semibold hover:scale-105 active:scale-95 transition-all duration-300 shadow-[0_4px_15px_-2px_rgba(93,112,82,0.2)]">
+        <button onclick="navigateTo('contact')" class="bg-primary text-white rounded-full px-12 py-3 font-semibold hover:scale-105 active:scale-95 transition-all duration-300 shadow-[0_4px_15px_-2px_rgba(93,112,82,0.2)]">
           Begin Your Enrollment
         </button>
       </div>
@@ -1008,7 +1008,7 @@ window.addEventListener('load', function() {
             </div>
           </div>
 
-          <button class="w-full border-2 border-primary text-primary rounded-full py-2.5 font-semibold hover:bg-primary hover:text-white transition-all duration-300">
+          <button onclick="navigateTo('contact')" class="w-full border-2 border-primary text-primary rounded-full py-2.5 font-semibold hover:bg-primary hover:text-white transition-all duration-300">
             Start Free
           </button>
         </div>
@@ -1048,7 +1048,7 @@ window.addEventListener('load', function() {
             </div>
           </div>
 
-          <button class="w-full bg-primary text-white rounded-full py-2.5 font-semibold hover:scale-105 active:scale-95 transition-all duration-300 shadow-[0_4px_15px_-2px_rgba(93,112,82,0.2)]">
+          <button onclick="navigateTo('contact')" class="w-full bg-primary text-white rounded-full py-2.5 font-semibold hover:scale-105 active:scale-95 transition-all duration-300 shadow-[0_4px_15px_-2px_rgba(93,112,82,0.2)]">
             Start Pro Trial
           </button>
         </div>
@@ -1086,7 +1086,7 @@ window.addEventListener('load', function() {
             </div>
           </div>
 
-          <button class="w-full border-2 border-secondary text-secondary rounded-full py-2.5 font-semibold hover:bg-secondary hover:text-white transition-all duration-300">
+          <button onclick="navigateTo('contact')" class="w-full border-2 border-secondary text-secondary rounded-full py-2.5 font-semibold hover:bg-secondary hover:text-white transition-all duration-300">
             Start Premium Trial
           </button>
         </div>
@@ -1291,7 +1291,7 @@ window.addEventListener('load', function() {
           </li>
         </ul>
 
-        <button class="w-full bg-secondary text-white rounded-full py-2.5 font-semibold hover:scale-105 active:scale-95 transition-all duration-300 shadow-[0_4px_15px_-2px_rgba(193,140,93,0.2)]">
+        <button onclick="navigateTo('contact')" class="w-full bg-secondary text-white rounded-full py-2.5 font-semibold hover:scale-105 active:scale-95 transition-all duration-300 shadow-[0_4px_15px_-2px_rgba(193,140,93,0.2)]">
           Start Free Trial
         </button>
       </div>
@@ -1897,7 +1897,7 @@ window.addEventListener('load', function() {
           </div>
         </div>
 
-        <button class="w-full bg-primary text-white rounded-full py-3 font-semibold hover:scale-105 active:scale-95 transition-all duration-300 shadow-[0_4px_15px_-2px_rgba(93,112,82,0.2)]">
+        <button onclick="navigateTo('contact')" class="w-full bg-primary text-white rounded-full py-3 font-semibold hover:scale-105 active:scale-95 transition-all duration-300 shadow-[0_4px_15px_-2px_rgba(93,112,82,0.2)]">
           Enroll as Professional
         </button>
       </div>
@@ -1931,7 +1931,7 @@ window.addEventListener('load', function() {
           </div>
         </div>
 
-        <button class="w-full bg-secondary text-white rounded-full py-3 font-semibold hover:scale-105 active:scale-95 transition-all duration-300 shadow-[0_4px_15px_-2px_rgba(193,140,93,0.2)]">
+        <button onclick="navigateTo('contact')" class="w-full bg-secondary text-white rounded-full py-3 font-semibold hover:scale-105 active:scale-95 transition-all duration-300 shadow-[0_4px_15px_-2px_rgba(193,140,93,0.2)]">
           Register Your Firm
         </button>
       </div>
@@ -1949,7 +1949,7 @@ window.addEventListener('load', function() {
           </div>
           <h4 class="font-heading font-bold text-xl mb-3">Engineers</h4>
           <p class="text-sm text-gray-600 mb-4">Structural, Electrical, MEP, and more</p>
-          <button class="text-primary font-semibold text-sm hover:text-primary/80 transition">
+          <button onclick="navigateTo('contact')" class="text-primary font-semibold text-sm hover:text-primary/80 transition">
             Register as Engineer →
           </button>
         </div>
@@ -1961,7 +1961,7 @@ window.addEventListener('load', function() {
           </div>
           <h4 class="font-heading font-bold text-xl mb-3">Designers</h4>
           <p class="text-sm text-gray-600 mb-4">Interior, Landscape, 3D & Visualization</p>
-          <button class="text-secondary font-semibold text-sm hover:text-secondary/80 transition">
+          <button onclick="navigateTo('contact')" class="text-secondary font-semibold text-sm hover:text-secondary/80 transition">
             Register as Designer →
           </button>
         </div>
@@ -1973,7 +1973,7 @@ window.addEventListener('load', function() {
           </div>
           <h4 class="font-heading font-bold text-xl mb-3">Plumbers</h4>
           <p class="text-sm text-gray-600 mb-4">Installation, Emergency, Gas Specialists</p>
-          <button class="text-primary font-semibold text-sm hover:text-primary/80 transition">
+          <button onclick="navigateTo('contact')" class="text-primary font-semibold text-sm hover:text-primary/80 transition">
             Register as Plumber →
           </button>
         </div>
@@ -2260,7 +2260,7 @@ window.addEventListener('load', function() {
           </div>
         </div>
 
-        <button class="bg-primary text-white rounded-full px-12 py-4 font-semibold text-lg hover:scale-105 active:scale-95 transition-all duration-300 shadow-[0_6px_20px_-2px_rgba(93,112,82,0.25)]">
+        <button onclick="navigateTo('contact')" class="bg-primary text-white rounded-full px-12 py-4 font-semibold text-lg hover:scale-105 active:scale-95 transition-all duration-300 shadow-[0_6px_20px_-2px_rgba(93,112,82,0.25)]">
           Register Your Firm Now
         </button>
       </div>
